/*
 * Copyright (C) 2023 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package android.hardware.istats;

option java_package = "android.hardware.istats";
option java_outer_classname = "TestVendorAtom";

import "frameworks/proto_logging/stats/atom_field_options.proto";

/* Allocated atom IDs. */
message Atom {
    oneof pushed {
        TestVendorAtomReported test_vendor_atom_reported = 109999
            [(android.os.statsd.module) = "istatsvts"];
    }
}

message TestVendorAtomNestedMessage {
    optional int32 int_value = 1;
    optional int64 long_value = 2;
    optional float float_value = 3;
}

/**
 * Logs the test vendor atom for IStats VTS
 */
message TestVendorAtomReported {
    optional string reverse_domain_name = 1;
    optional int32 int_value = 2;
    optional int64 long_value = 3;
    optional float float_value = 4;
    optional string string_value = 5;
    optional bool bool_value = 6;
    repeated int32 repeated_int_value = 7;
    repeated int64 repeated_long_value = 8;
    repeated float repeated_float_value = 9;
    repeated string repeated_string_value = 10;
    repeated bool repeated_bool_value = 11;
    optional TestVendorAtomNestedMessage byte_array_value = 12
        [(android.os.statsd.log_mode) = MODE_BYTES];
}
